convert/objects/Sela__c.object
<CustomObject>
    <label>SELA</label>
    <nameField>
        <label>Sela Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>DC_rate__c</fullName>
        <label>DC rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>List_Price_Total__c</fullName>
        <label>List Price Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrgName__c</fullName>
        <label>OrgName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <label>Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>America</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>GMAU</fullName>
                </value>
                <value>
                    <fullName>GMC</fullName>
                </value>
                <value>
                    <fullName>GME</fullName>
                </value>
                <value>
                    <fullName>GMSR</fullName>
                </value>
                <value>
                    <fullName>GS</fullName>
                </value>
                <value>
                    <fullName>HMID DMS</fullName>
                </value>
                <value>
                    <fullName>HQ</fullName>
                </value>
                <value>
                    <fullName>KIA HQ</fullName>
                </value>
                <value>
                    <fullName>KIA India</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rollout_Total_List__c</fullName>
        <label>Rollout Total List</label>
        <summarizedField>SelaProductLineItem__c.TotalListPrice__c</summarizedField>
        <summaryForeignKey>SelaProductLineItem__c.SELA__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_Total__c</fullName>
        <label>Rollup Total</label>
        <summarizedField>SelaProductLineItem__c.TotalPrice__c</summarizedField>
        <summaryForeignKey>SelaProductLineItem__c.SELA__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Org__c</columns>
        <columns>Total__c</columns>
        <columns>List_Price_Total__c</columns>
        <columns>DC_rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>